2011-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/dialogs.R: forgot to pass parent along in galert

2011-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R (gslider): added length.out, along.with arguments

	* R/gspinbutton.R: added length.out, along.with arguments

2011-07-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* man/gWidgets-dialogs.Rd (icon): doc changes to gbasicdialog

	* R/glayout.R (glayout): worked on [ method to return subset of
	one row or one column. (Before just an item)

2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* DESCRIPTION (Version): version bump

2011-04-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* man/gWidgets-methods.Rd: put in new methods editable[<-]. Can be
	used to query or set whether a widget is editable. E.g, gedit text
	may be locked.

2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (gedit): added new argument initial.msg to display a
	grayed out message when no intial value is specified

2010-12-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gaction.R (gaction): added parent argument (like gWidgetsWWW),
	allows one to insert key accelerator into toplevel window of parent

2010-10-17  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: added use.togglebutton argument to use toggle
	button in place of checkbox

2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcommandline.R: updated this widget, works better with Qt, tcltk

2010-10-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: added ... to gcheckbox!

2010-10-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ghelp.R (.findHelpPage): cleaned up code thanks to Josef L. and
	his textConnection snippet

2010-09-19  john verzani  <verzani@john-verzanis-macbook-pro.local>
